<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.missouristate.davis916.calculator.MyActivity">

    <!-- Extra formatting for buttons follows best practice for
    borderless buttons and for using "start" and "end" properties
    instead of "left" and "right" properties. The leftmost grey buttons
    must be 20sp larger than the rest because margins are not applied
    to the span="2" buttons. I have also made the text larger for
    improved usability and accessibility, as well as some padding
    for the TextView text. -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2,3"
        android:layout_margin="15dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:background="@color/orange_cream"
                android:gravity="end"
                android:paddingEnd="6dp"
                android:paddingStart="6dp"
                android:text="@string/zero"
                android:textSize="70sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="3dp">

            <Button
                android:id="@+id/button1"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_span="2"
                android:background="@color/dusk_blue"
                android:contentDescription="@string/ac"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:onClick="goAC"
                android:text="@string/ac" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/percent"
                android:contentDescription="@string/percent"
                android:minHeight="70dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:textSize="20sp"
                android:onClick="goOperator"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/div"
                android:contentDescription="@string/div"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:onClick="goOperator"
                style="?android:attr/borderlessButtonStyle" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/seven"
                android:contentDescription="@string/seven"
                android:minHeight="70dp"
                android:minWidth="90dp"
                android:textSize="20sp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/eight"
                android:contentDescription="@string/eight"
                android:minHeight="70dip"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/nine"
                android:contentDescription="@string/nine"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/mult"
                android:contentDescription="@string/mult"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:onClick="goOperator"
                style="?android:attr/borderlessButtonStyle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/four"
                android:contentDescription="@string/four"
                android:minHeight="70dp"
                android:minWidth="90dp"
                android:textSize="20sp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/five"
                android:contentDescription="@string/five"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/six"
                android:contentDescription="@string/six"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/subtract"
                android:contentDescription="@string/subtract"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:onClick="goOperator"
                style="?android:attr/borderlessButtonStyle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/one"
                android:contentDescription="@string/one"
                android:minHeight="70dp"
                android:minWidth="90dp"
                android:textSize="20sp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/two"
                android:contentDescription="@string/two"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/three"
                android:contentDescription="@string/three"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/add"
                android:contentDescription="@string/add"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:onClick="goOperator"
                style="?android:attr/borderlessButtonStyle" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@color/grey"
                android:text="@string/zero"
                android:contentDescription="@string/zero"
                android:minHeight="70dp"
                android:minWidth="70dp"
                android:textSize="20sp"
                android:layout_marginEnd="3dp"
                android:onClick="goOperand"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@color/dusk_blue"
                android:text="@string/equal"
                android:contentDescription="@string/equal"
                android:minHeight="70dp"
                android:textSize="20sp"
                android:layout_marginStart="3dp"
                android:onClick="goCompute"
                style="?android:attr/borderlessButtonStyle" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>
